# fall_detection

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
config/: app.yaml
doc/: PPT阶段性结果表.md  README_新增摔倒报警上传骨架说明.md  中期汇报测试方案.md  摔倒报警上传联动方案.md  摔倒检测项目方案草案_v1.md  说明.md
include/alert/: FallAlertClient.hpp  FallAlertTypes.hpp
include/camera/: CameraManager.hpp
include/core/: App.hpp  MainMenu.hpp  RuntimeModeSelection.hpp
include/detect/: PersonDetector.hpp
include/fall/: FallDetector.hpp  PoseFallDetector.hpp
include/pose/: MPPersonDetector.hpp  MPPoseEstimator.hpp  MoveNetPoseEstimator.hpp
include/remote/: PoseRemoteClient.hpp  PoseRemoteTypes.hpp
include/tracking/: SinglePersonTracker.hpp
include/ui/: Renderer.hpp
pc_pose_server/: README.md  app.py  requirements.txt
pc_pose_server/services/: __init__.py  pose_service.py
src/: main.cpp
src/alert/: FallAlertClient.cpp
src/camera/: CameraManager.cpp
src/core/: App.cpp  MainMenu.cpp
src/detect/: PersonDetector.cpp
src/fall/: FallDetector.cpp  PoseFallDetector.cpp
src/pose/: MPPersonDetector.cpp  MPPoseEstimator.cpp  MoveNetPoseEstimator.cpp
src/remote/: PoseRemoteClient.cpp
src/tracking/: SinglePersonTracker.cpp
src/ui/: Renderer.cpp
